-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.5-1, 6.7.0
-
25fbbb561 (dev), 005e2c787 (6.9), 85eddda2f (tqtc/lts-6.8), 7d2e26d86 (tqtc/lts-6.5)
Problem summary
QVariantAnimation::currentValue changes when we call setStartValue() and setEndValue(). This can cause wrong outcomes for calculations that are bound to this value.
Test description
The attached project contains a simple class, TestObject, with a property that is controlled by a QPropertyAnimation:
Q_PROPERTY(qreal number MEMBER m_number NOTIFY numberChanged)
Then, we monitor the value of both TestObject::number and QVariantAnimation::currentValue while swapping the animation's startValue/endValue and while running the animation. Results of interest are plotted on a chart as well as printed to the console.
Steps to reproduce
Part 1: Glitches in value
- Build and run the attached project
- Click the "Animate" button (to run the animation)
- Toggle the "Ascending" switch (to swap startValue and endValue)
- Repeat steps #2 and #3 a few times
Part 2: Inconsistent values
- Build and run the attached project
- Toggle the "Ascending" switch a few times (to swap startValue and endValue)
- Click the "Animate" button (to run the animation)
- Toggle the "Ascending" switch a few times again
Outcomes
Part 1: Glitches in value
- The blue "number" line is a nice triangular wave. The value of "number" does not change when calling setStartValue() and setEndValue(). (Expected)
- The green "currentValue" line mostly looks like the blue "number" line, except that it contsins vertical glitches (value jumps) between animations. The value of "currentValue" jumps when calling setStartValue() and setEndValue(). (Not expected)
- Each time we do step #3, QVariantAnimation::valueChanged is emitted twice - once to change it to an Invalid variant, and again to change it to the new endValue (Not expected):
currentValue changed while animation is stopped. New value: QVariant(Invalid) currentValue changed while animation is stopped. New value: QVariant(int, 100)
Part 2: Inconsistent values
- (step #2) When the program first starts, toggling the switch sets currentValue = startValue (Reasonably expected?)
- (step #4) After the animation has run at least once, toggling the switch sets currentValue = endValue (Not expected)
Workaround
As the attached test shows, QPropertyAnimation filters out these unexpected changes. Instead of binding directly to QVariantAnimation::currentValue, users can apply QPropertyAnimation to a Q_PROPERTY and bind to that instead.
For Gerrit Dashboard: QTBUG-125586 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
582745,2 | Fix QVariantAnimation the current value unexpected changes | dev | qt/qtbase | Status: NEW | -1 | -1 |
639674,3 | Doc: QPropertyAnimation does not update target property when stopped | dev | qt/qtbase | Status: MERGED | +2 | 0 |
641347,2 | Doc: QPropertyAnimation does not update target property when stopped | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
641724,2 | Doc: QPropertyAnimation does not update target property when stopped | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
642807,2 | Doc: QPropertyAnimation does not update target property when stopped | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |