Doc: QPropertyAnimation does not update target property when stopped

When stopped, an animations's currentValue can change as a result of
changes to the the start- or end value. The target property will not
be updated, however.

Fixes: QTBUG-125586
Pick-to: 6.8 6.5
Change-Id: Ib03133db80e92b4d73a1140e9a94d6d7a6b68fc4
Reviewed-by: Sze Howe Koh <szehowe.koh@gmail.com>
(cherry picked from commit 25fbbb56122d95a9dce004ee6e9de8d144a46032)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>